force-app/main/default/objects/RC_panelist__c/RC_panelist__c.object-meta.xml
<CustomObject>
    <description>Panellists who can chosen for placements drive when creating an event.</description>
    <label>RC_panelist</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>RC_panelist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panelists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>