force-app/main/default/objects/RC_panelist__c/fields/panelistsEmail__c.field-meta.xml
<CustomField>
    <fullName>panelistsEmail__c</fullName>
    <label>panelistsEmail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>