force-app/main/default/objects/RC_panelist__c/fields/panelistsName__c.field-meta.xml
<CustomField>
    <fullName>panelistsName__c</fullName>
    <label>panelistsName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>