force-app/main/default/objects/RC_panelist__c/fields/panelistsPassword__c.field-meta.xml
<CustomField>
    <fullName>panelistsPassword__c</fullName>
    <label>panelistsPassword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>