force-app/main/default/objects/RC_panelist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>panelistsName__c</columns>
    <columns>panelistsEmail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>